cmake_minimum_required (VERSION 2.8)

project(GanTape)

set(COMPILER_FLAGS "-w -fPIC")
if(CCIN2P3_XRD)
	set(COMPILER_FLAGS "${COMPILER_FLAGS} -DCCIN2P3_XRD -D_LARGEFILE64_SOURCE -D_FILE_OFFSET_BITS=64 -D_REENTRANT")
endif()
set(CMAKE_C_FLAGS ${COMPILER_FLAGS})
set(CMAKE_CXX_FLAGS ${COMPILER_FLAGS})

set(BUILTIN_GRU_INC_DIR ${PROJECT_SOURCE_DIR}/include PARENT_SCOPE)
set(BUILTIN_GRU_LIB gan_tape PARENT_SCOPE)

include_directories(${PROJECT_SOURCE_DIR}/include)

file(GLOB sources sources/*)
add_library(gan_tape SHARED ${sources})
if(CCIN2P3_XRD)
	target_link_libraries(gan_tape ${XROOTD_LIBRARIES})
endif()

install(TARGETS gan_tape EXPORT KaliVedaExports LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR})
install(DIRECTORY ${PROJECT_SOURCE_DIR}/include/GanTape DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
install(DIRECTORY ${PROJECT_SOURCE_DIR}/include/AppleInclude DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
