set(KVLIBRARY_NAME KVMultiDet)

add_subdirectory(globvars)
add_subdirectory(trieur)
add_subdirectory(stopping)
#add_subdirectory(identification)
add_subdirectory(data_management)
add_subdirectory(calibration)
add_subdirectory(analysis)
add_subdirectory(events)
add_subdirectory(particles)
add_subdirectory(db)
add_subdirectory(base)
add_subdirectory(geometry)

#add_dependencies(KVMultiDetparticles KVMultiDetbase)
#add_dependencies(KVMultiDettrieur KVMultiDetbase)
#add_dependencies(KVMultiDetidentification KVMultiDetparticles KVMultiDetbase)
#add_dependencies(KVMultiDetevents KVMultiDetparticles KVMultiDetbase)
#add_dependencies(KVMultiDetglobvars KVMultiDetevents KVMultiDetparticles KVMultiDetbase)
#add_dependencies(KVMultiDetstopping KVMultiDetevents KVMultiDetparticles KVMultiDetbase)
#add_dependencies(KVMultiDetgeometry KVMultiDetstopping KVMultiDetevents KVMultiDetparticles KVMultiDetbase)
#add_dependencies(KVMultiDetdb KVMultiDetstopping KVMultiDetevents KVMultiDetparticles KVMultiDetbase)
#add_dependencies(KVMultiDetcalibration KVMultiDetstopping KVMultiDetgeometry KVMultiDetparticles KVMultiDetbase)
#add_dependencies(KVMultiDetdata_management KVMultiDetdb KVMultiDetstopping KVMultiDetevents KVMultiDetparticles KVMultiDetbase)
#add_dependencies(KVMultiDetanalysis KVMultiDetdata_management KVMultiDetdb KVMultiDetstopping KVMultiDetglobvars KVMultiDetevents KVMultiDetparticles KVMultiDetbase)
