set(KVLIBRARY_NAME KVMultiDet)

add_subdirectory(identification)
add_subdirectory(exp_events)
add_subdirectory(gui)
add_subdirectory(globvars)
add_subdirectory(trieur)
add_subdirectory(stopping)
add_subdirectory(daq_cec)
add_subdirectory(data_management)
add_subdirectory(calibration)
add_subdirectory(analysis)
add_subdirectory(events)
add_subdirectory(particles)
add_subdirectory(db)
add_subdirectory(base)
add_subdirectory(geometry)
